--- a/src/org/cict/evaluation/moving_up/CurriculumRow.fxml
+++ b/src/org/cict/evaluation/moving_up/CurriculumRow.fxml
@@ -7,23 +7,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="70.0" prefHeight="70.0" prefWidth="1000.0" spacing="10.0" styleClass="metro-row" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="70.0" prefHeight="70.0" prefWidth="1000.0" spacing="10.0" styleClass="metro-row" stylesheets="@metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="721.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label fx:id="lbl_curriculum_name" accessibleText="lbl_name" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="216.0" text="BSIT REVISED MAJOR IN GRAPHICS(16-17)" textFill="#003464" wrapText="true">
+            <Label fx:id="lbl_curriculum_name" accessibleText="lbl_name" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="216.0" text="BSIT REVISED MAJOR IN GRAPHICS(16-17)" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_major" accessibleText="lbl_major" text="Graphics Design" textFill="#003464" wrapText="true">
+            <Label fx:id="lbl_major" accessibleText="lbl_major" text="Graphics Design" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <JFXButton fx:id="btn_select" minWidth="-Infinity" style="-fx-border-color: #003464;" text="Select" textFill="#003464">
+      <JFXButton fx:id="btn_select" minWidth="-Infinity" style="-fx-border-color: #fff;" text="Select" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
