--- a/src/org/cict/evaluation/moving_up/moving-up.fxml
+++ b/src/org/cict/evaluation/moving_up/moving-up.fxml
@@ -5,21 +5,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0087D7;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox>
          <children>
-            <Label text="Moving Up" textFill="#01305e">
+            <Label text="Moving Up" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label text="This process will change the student's current curriculum into another curriculum. But it requires all the grades to be passed before continuing the process itself." textFill="#003f75" wrapText="true">
+            <Label text="This process will change the student's current curriculum into another curriculum. But it requires all the grades to have a passed remarks before continuing the process itself." textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="10.0" layoutY="42.0" text="Here are the list of curriculums that the student can choose from:" textFill="#003f75" wrapText="true">
+            <Label layoutX="10.0" layoutY="42.0" text="Here are the list of curriculums that the student can choose from:" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -32,7 +32,7 @@
             <Insets left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
       </VBox>
-      <VBox fx:id="vbox_list" prefHeight="234.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="vbox_list" prefHeight="234.0" prefWidth="600.0" styleClass="metro-table" stylesheets="@metro-ui-table.css" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
          </VBox.margin>
