--- a/src/update4/org/cict/linked_manager/LinkedHome.fxml
+++ b/src/update4/org/cict/linked_manager/LinkedHome.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" styleClass="metro-base-color" stylesheets="@metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" styleClass="metro-base-color" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="20.0">
          <children>
@@ -409,37 +410,45 @@
                                     <Image url="@images/marshall.png" />
                                  </image>
                               </ImageView>
-                              <Label text="Marshalls">
+                              <Label maxWidth="1.7976931348623157E308" text="Marshalls" HBox.hgrow="ALWAYS">
                                  <font>
                                     <Font size="30.0" />
                                  </font>
                               </Label>
-                           </children>
-                        </HBox>
-                        <VBox spacing="10.0">
-                           <children>
-                              <HBox prefWidth="200.0" spacing="10.0">
-                                 <children>
-                                    <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                              <JFXButton fx:id="btn_new_marshall" prefHeight="41.0" prefWidth="195.0" style="-fx-border-color: #FFFFFF;" text="Add new Marshall" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@images/Next%20page_96px_1.png" />
+                                          <Image url="@images/marshall.png" />
                                        </image>
-                                       <HBox.margin>
-                                          <Insets />
-                                       </HBox.margin>
                                     </ImageView>
-                                    <Label text="Marshal Table" wrapText="true">
+                                 </graphic>
+                              </JFXButton>
+                           </children>
+                           <padding>
+                              <Insets right="20.0" />
+                           </padding>
+                        </HBox>
+                        <StackPane VBox.vgrow="ALWAYS">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="30.0" right="20.0" top="15.0" />
+                           </VBox.margin>
+                           <children>
+                              <VBox fx:id="vbox_no_marshall_found" spacing="10.0">
+                                 <children>
+                                    <Label text="No Account Found.">
                                        <font>
-                                          <Font size="16.0" />
+                                          <Font size="25.0" />
                                        </font>
                                     </Label>
                                  </children>
-                              </HBox>
+                              </VBox>
+                              <VBox fx:id="vbox_list" spacing="10.0" styleClass="metro-table" />
                            </children>
-                           <padding>
-                              <Insets left="30.0" top="20.0" />
-                           </padding>
-                        </VBox>
+                        </StackPane>
                      </children>
                      <padding>
                         <Insets left="20.0" />
@@ -456,4 +465,8 @@
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <stylesheets>
+      <URL value="@metro-ui.css" />
+      <URL value="@metro-ui-table.css" />
+   </stylesheets>
 </VBox>
